# Diabetes-Analysis-and-Predictive-Modeling-

./: README.md
diabetes-analysis-and-predictive-modeling-/: Makefile  README.md  pyproject.toml  requirements.txt
diabetes-analysis-and-predictive-modeling-/docs/: mkdocs.yml
diabetes-analysis-and-predictive-modeling-/docs/docs/: index.md
diabetes-analysis-and-predictive-modeling-/notebooks/: EDA.ipynb  modeling.ipynb
