[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "diabetes_analysis_and_predictive_modeling_"
version = "0.0.1"
description = "This project aims to predict when a person has diabeties using lifestyle health indicators"
authors = [
  { name = "Prudence Theodorakos" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.10.0"


[tool.ruff]
line-length = 99
src = ["diabetes_analysis_and_predictive_modeling_"]
include = ["pyproject.toml", "diabetes_analysis_and_predictive_modeling_/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["diabetes_analysis_and_predictive_modeling_"]
force-sort-within-sections = true

